Fix rpsls selection alignment on mobile screen sizes and fix game area sizing for tablet size screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,6 +459,7 @@ input {
     }
 
     #game-area {
+        height: 45rem;
         border: 0.75rem ridge #3a3a3a;
     }
 
